--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,10 @@ spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=false
 spring.jpa.open-in-view=false
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.password=root
+spring.datasource.username=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/estore
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.sql.init.platform=postgresql
 springdoc.api-docs.path=/openapi-estore
